# ai-fitness-companiion

./: .replit  README.md  breach_response_plan.md  data_protection.py  database.py  email_service.py  fitness_app.db  fitness_tracker_apis.py  food_database.py  gdpr_compliance.py  main.py  notifications.py  oauth_handlers.py  personalization.py  pyproject.toml  security_monitoring.py  user_simulation_demo.py
attached_assets/: Pasted--DOCTYPE-html-html-head-title-Fitness-Check-In-title-script-function-toggleCycle--1749944862337_1749944862337.txt  Pasted--DOCTYPE-html-html-lang-en-GB-head-meta-charset-UTF-8-meta-name-viewport-conten-1750446370962_1750446370963.txt  Pasted--DOCTYPE-html-html-lang-en-GB-head-meta-charset-UTF-8-title-Fitness-Assistant--1750093331496_1750093331496.txt  Pasted--FULL-UPDATED-PROMPT-App-Name-AI-Fitness-Companion-Tone-Supportive-inclusive-hormone-aware-non-1750518205997_1750518205999.txt  Pasted--Prompt-for-Lovable-dev-Fitness-Assistant-AI-Tracker-I-want-to-create-a-user-friendly-fitness-as-1750093967850_1750093967851.txt  Pasted-A-fully-custom-AI-powered-lifestyle-aware-fitness-and-fat-loss-companion-app-that-helps-individual-1750444647702_1750444647703.txt  Pasted-Build-a-clean-modern-and-conversion-focused-landing-page-for-a-fat-loss-fitness-companion-web-app--1750524407156_1750524407157.txt  Pasted-Fat-Loss-That-Actually-Makes-Sense-Not-sure-where-to-start-with-your-weight-loss-journey-Or-frustr-1750461887217_1750461887217.txt  content-1750849304139.md  (+9 more)
static/: manifest.json  notifications.js  offline-storage.js  offline.html  style.css  sw.js
(+19 files in other folders)
