[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.4",
    "flask>=3.1.1",
    "openai>=1.86.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "stripe>=12.2.0",
]
